--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                                     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #28A745">
         <div class="container">
-          <a class="navbar-brand" href="suricata.html">
+          <a class="navbar-brand" href="#">
               
-            <img src="../assets/img/logo-white.png" class="img-fluid">
+            <img src="assets/img/logo-white.png" width="70" height="44" class="d-inline-block align-text-top">
         
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
       <div class="row mb-0">
                   <div class="col-12 col-md-4 py-3">
                       <div class="card mx-auto" style="width: 18rem;">
-                          <img src="../assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                          <img src="assets/img/cupon-1.jpg" class="card-img-top" alt="...">
                           <div class="card-body pb-0">
                           <h5 class="card-title fs-3">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
                           <p class="card-text fs-5 mb-0">Plumones Manolino</p>
@@ -65,7 +65,7 @@
 
                 <div class="col-12 col-md-4 py-3">
                   <div class="card mx-auto" style="width: 18rem;">
-                      <img src="../assets/img/cupon-2.jpg" class="card-img-top" alt="...">
+                      <img src="assets/img/cupon-2.jpg" class="card-img-top" alt="...">
                       <div class="card-body pb-0">
                       <h5 class="card-title fs-3">Entrada para compartir + platos de fondo + postres + bebestibles</h5>
                       <p class="card-text fs-5 mb-0">V for Vegan</p>
@@ -82,7 +82,7 @@
 
                 <div class="col-12 col-md-4 py-3">
                   <div class="card mx-auto" style="width: 18rem;">
-                      <img src="../assets/img/cupon-3.jpg" class="card-img-top" alt="...">
+                      <img src="assets/img/cupon-3.jpg" class="card-img-top" alt="...">
                       <div class="card-body pb-0">
                       <h5 class="card-title fs-3">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</h5>
                       <p class="card-text fs-5 mb-0">Clínica Dental Quijada</p>
@@ -99,7 +99,7 @@
 
                 <div class="col-12 col-md-4 py-3">
                   <div class="card mx-auto" style="width: 18rem;">
-                      <img src="../assets/img/cupon-4.jpg" class="card-img-top" alt="...">
+                      <img src="assets/img/cupon-4.jpg" class="card-img-top" alt="...">
                       <div class="card-body pb-0">
                       <h5 class="card-title fs-3">Colación para 2 personas + postre (no incluye bebidas)</h5>
                       <p class="card-text fs-5 mb-0">Suricata almacen</p>
@@ -116,7 +116,7 @@
 
               <div class="col-12 col-md-4 py-3">
               <div class="card mx-auto" style="width: 18rem;">
-                  <img src="../assets/img/cupon-5.jpg" class="card-img-top" alt="...">
+                  <img src="assets/img/cupon-5.jpg" class="card-img-top" alt="...">
                   <div class="card-body pb-0">
                   <h5 class="card-title fs-3">1, 2 o 4 tickets para Stukids. Elige sucursal</h5>
                   <p class="card-text fs-5 mb-0">Stukids Centro de Eventos</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="col-12 col-md-4 py-3">
               <div class="card mx-auto" style="width: 18rem;">
-                  <img src="../assets/img/cupon-6.jpg" class="card-img-top" alt="...">
+                  <img src="assets/img/cupon-6.jpg" class="card-img-top" alt="...">
                   <div class="card-body pb-0">
                   <h5 class="card-title fs-3">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</h5>
                   <p class="card-text fs-5">D-Latam Travel</p>
@@ -167,7 +167,7 @@
 
   <footer class="text-center fw-lighter mt-0 p-2">
     <div class="container-fluid">
-      <img src="../assets/img/logo-black.png" class="fluid p-2" alt="logo-black">
+      <img src="assets/img/logo-black.png" width="70" height="44" class="d-inline-block align-text-top">
     <p>© 2018 Cuppon Latam .Todos los derechos reservados.</p>
   </div>
 
